[gd_scene load_steps=3 format=3 uid="uid://b5nqceyqw4pqb"]

[ext_resource type="Script" uid="uid://jx172ukmmfsa" path="res://settings_menu.gd" id="1_ufg0w"]
[ext_resource type="AudioStream" uid="uid://bnbada8q7r5yi" path="res://sounds/mixkit-footsteps-on-tall-grass-532.wav" id="2_0cmel"]

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ufg0w")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.06666667, 0.08627451, 0.12156863, 1)

[node name="VBoxContainer" type="MarginContainer" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="TabContainer" type="TabContainer" parent="Background/VBoxContainer"]
layout_mode = 2
tab_alignment = 1
current_tab = 3

[node name="Audio" type="MarginContainer" parent="Background/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32
metadata/_tab_index = 0

[node name="VBoxContainer" type="VBoxContainer" parent="Background/VBoxContainer/TabContainer/Audio"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="Background/VBoxContainer/TabContainer/Audio/VBoxContainer"]
layout_mode = 2
text = "Volume"

[node name="HSlider" type="HSlider" parent="Background/VBoxContainer/TabContainer/Audio/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Background/VBoxContainer/TabContainer/Audio/VBoxContainer"]
stream = ExtResource("2_0cmel")

[node name="Video" type="VBoxContainer" parent="Background/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="Controls" type="VBoxContainer" parent="Background/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="Language" type="MarginContainer" parent="Background/VBoxContainer/TabContainer"]
layout_mode = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32
metadata/_tab_index = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Background/VBoxContainer/TabContainer/Language"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="Background/VBoxContainer/TabContainer/Language/VBoxContainer"]
layout_mode = 2
text = "SETTINGS_LANGUAGE"

[node name="OptionButton" type="OptionButton" parent="Background/VBoxContainer/TabContainer/Language/VBoxContainer"]
layout_mode = 2

[node name="BackButton" type="Button" parent="Background/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
text = "Back"

[connection signal="value_changed" from="Background/VBoxContainer/TabContainer/Audio/VBoxContainer/HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="item_selected" from="Background/VBoxContainer/TabContainer/Language/VBoxContainer/OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="pressed" from="Background/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
